--- a/website-project/index.htm
+++ b/website-project/index.htm
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>USG</title>
+    <link rel="shortcut icon" href="resources/img/web.ico" type="image/x-icon">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
