sign-in.htm, fix animation of header

--- a/website-project/index.htm
+++ b/website-project/index.htm
@@ -131,7 +131,9 @@
 
     <div class="nav-bar-menu container" id="nav-bar-menu" >
       <div class="logo-brand">
-        <img src="resources/img/fit-logo.png" alt="" style="height: 100%; width: 3.5rem;">
+        <a href="index.htm" class="h-100">
+          <img src="resources/img/fit-logo.png" alt="" style="height: 100%; width: 3.5rem;">         
+        </a>
         <h3>USG</h3>
       </div>
 
@@ -228,7 +230,7 @@
             <i class="fa fa-search"></i>
           </button>
 
-          <a name="" id="account-btn" class="btn bg-transparent mx-5" href="#" role="button">
+          <a name="" id="account-btn" class="btn bg-transparent mx-5" href="pages/login.htm" role="button">
             <i class="fas fa-user text-dark"></i>
           </a>
       
