static web complete category list product

--- a/website-project/pages/forgot-pwd.htm
+++ b/website-project/pages/forgot-pwd.htm
@@ -157,133 +157,118 @@
         </form>
       </div>
 
-      <div class="nav-bar-menu container" id="nav-bar-menu">
-
+      <div class="nav-bar-menu container" id="nav-bar-menu" >
         <div class="logo-brand">
-          <a href="../index.htm" class="h-100">
+          <a href="index.htm" class="h-100">
             <img src="../resources/img/fit-logo.png" alt="" style="height: 100%; width: 3.5rem;">         
           </a>
           <h3>USG</h3>
         </div>
-
+  
         <div class="nav-menu">
           <div class="nav-link-menu">
-            <ul>
-              <li class="nav-link" id="sales">
-                <a href="#">SALES</a>
-              </li>
-              <li class="nav-link">
-                <a href="#">ÁO<i class="fa fa-caret-down"></i></a>
-                <div class="dropdown">
-                  <ul class="list-unstyled">
-                    <li class="drop-link">
-                      <a href="#">Áo thun ngắn tay</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Áo thun dài tay</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Áo thun tank top</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Áo sơ mi</a>
-                    </li>
-                    <div class="arrow-menu"></div>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link">
-                <a href="#">QUẦN <i class="fa fa-caret-down"></i> </a>
-                <div class="dropdown">
-                  <ul class="list-unstyled">
-                    <li class="drop-link">
-                      <a href="#">Quần short</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Quần jean dài</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Quần kaki dài</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Quần jogger</a>
-                    </li>
-                    <div class="arrow-menu"></div>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link">
-                <a href="#">VỚ TẤT <i class="fa fa-caret-down"></i> </a>
-                <div class="dropdown">
-                  <ul class="list-unstyled">
-                    <li class="drop-link">
-                      <a href="#">Vớ ngắn</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Vớ cổ cao</a>
-                    </li>
-                    <div class="arrow-menu"></div>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link">
-                <a href="#">PHỤ KIỆN <i class="fa fa-caret-down"></i> </a>
-                <div class="dropdown">
-                  <ul class="list-unstyled">
-                    <li class="drop-link">
-                      <a href="#">Thăt lưng, dây nịt</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Bóp ví</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Khẩu trang</a>
-                    </li>
-                    <li class="drop-link">
-                      <a href="#">Nón</a>
-                    </li>
-                    <div class="arrow-menu"></div>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link">
-                <a href="#">THÔNG TIN</a>
-              </li>
-            </ul>
+              <ul>
+                <li class="nav-link" id="sales">
+                  <a href="#">SALES</a>
+                </li>
+                <li class="nav-link">
+                  <a href="#">ÁO<i class="fa fa-caret-down"></i></a>
+                  <div class="dropdown">
+                    <ul class="list-unstyled">
+                      <li class="drop-link">
+                        <a href="ao-thun-ngan-tay.htm">Áo thun ngắn tay</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="ao-thun-dai-tay.htm">Áo thun dài tay</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="ao-tank-top.htm">Áo thun tank top</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="ao-somi.htm">Áo sơ mi</a>
+                      </li>
+                      <div class="arrow-menu"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-link">
+                  <a href="#">QUẦN <i class="fa fa-caret-down"></i> </a>
+                  <div class="dropdown">
+                    <ul class="list-unstyled">
+                      <li class="drop-link">
+                        <a href="quan-short.htm">Quần short</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="quan-jean.htm">Quần jean dài</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="quan-kaki.htm">Quần kaki dài</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="quan-jogger.htm">Quần jogger</a>
+                      </li>
+                      <div class="arrow-menu"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-link">
+                  <a href="#">VỚ TẤT <i class="fa fa-caret-down"></i> </a>
+                  <div class="dropdown">
+                    <ul class="list-unstyled">
+                      <li class="drop-link">
+                        <a href="vo-ngan.htm">Vớ ngắn</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="vo-dai.htm">Vớ cổ cao</a>
+                      </li>
+                      <div class="arrow-menu"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-link">
+                  <a href="#">PHỤ KIỆN <i class="fa fa-caret-down"></i> </a>
+                  <div class="dropdown">
+                    <ul class="list-unstyled">
+                      <li class="drop-link">
+                        <a href="that-lung.htm">Thăt lưng, dây nịt</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="bop.htm">Bóp ví</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="khau-trang.htm">Khẩu trang</a>
+                      </li>
+                      <li class="drop-link">
+                        <a href="non.htm">Nón</a>
+                      </li>
+                      <div class="arrow-menu"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-link">
+                  <a href="#">THÔNG TIN</a>
+                </li>
+              </ul>
           </div>
-
+  
+          
+  
           <div class="nav-btn">
-            <button
-              type="button"
-              class="btn bg-transparent"
-              onclick="showSearchForm()"
-              id="search-btn"
-            >
+            <button type="button" class="btn bg-transparent" onclick="showSearchForm()" id="search-btn">
               <i class="fa fa-search"></i>
             </button>
-
-            <a
-              name=""
-              id="account-btn"
-              class="btn bg-transparent mx-5"
-              href="login.htm"
-              role="button"
-            >
+  
+            <a name="" id="account-btn" class="btn bg-transparent mx-5" href="../pages/login.htm" role="button">
               <i class="fas fa-user text-dark"></i>
             </a>
-
-            <a
-              name=""
-              id="cart-btn"
-              class="btn bg-dark rounded-0"
-              href="#"
-              role="button"
-            >
+        
+            <a name="" id="cart-btn" class="btn bg-dark rounded-0" href="#" role="button">
               <i class="fas fa-shopping-bag text-white"></i>
               <p>Giỏ hàng</p>
             </a>
           </div>
         </div>
+  
       </div>
     </div>
 
