--- a/website-project/pages/infor.htm
+++ b/website-project/pages/infor.htm
@@ -3,7 +3,7 @@
 
 <head>
   <title>USG</title>
-  <link rel="shortcut icon" href="resources/img/web.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../resources/img/web.ico" type="image/x-icon">
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -132,7 +132,7 @@
 
     <div class="nav-bar-menu container" id="nav-bar-menu" >
       <div class="logo-brand">
-        <a href="../index.htm" class="h-100">
+        <a href="index.htm" class="h-100">
           <img src="../resources/img/fit-logo.png" alt="" style="height: 100%; width: 3.5rem;">         
         </a>
         <h3>USG</h3>
@@ -149,16 +149,16 @@
                 <div class="dropdown">
                   <ul class="list-unstyled">
                     <li class="drop-link">
-                      <a href="#">Áo thun ngắn tay</a>
+                      <a href="ao-thun-ngan-tay.htm">Áo thun ngắn tay</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Áo thun dài tay</a>
+                      <a href="ao-thun-dai-tay.htm">Áo thun dài tay</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Áo thun tank top</a>
+                      <a href="ao-tank-top.htm">Áo thun tank top</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Áo sơ mi</a>
+                      <a href="ao-somi.htm">Áo sơ mi</a>
                     </li>
                     <div class="arrow-menu"></div>
                   </ul>
@@ -169,16 +169,16 @@
                 <div class="dropdown">
                   <ul class="list-unstyled">
                     <li class="drop-link">
-                      <a href="#">Quần short</a>
+                      <a href="quan-short.htm">Quần short</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Quần jean dài</a>
+                      <a href="quan-jean.htm">Quần jean dài</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Quần kaki dài</a>
+                      <a href="quan-kaki.htm">Quần kaki dài</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Quần jogger</a>
+                      <a href="quan-jogger.htm">Quần jogger</a>
                     </li>
                     <div class="arrow-menu"></div>
                   </ul>
@@ -189,10 +189,10 @@
                 <div class="dropdown">
                   <ul class="list-unstyled">
                     <li class="drop-link">
-                      <a href="#">Vớ ngắn</a>
+                      <a href="vo-ngan.htm">Vớ ngắn</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Vớ cổ cao</a>
+                      <a href="vo-dai.htm">Vớ cổ cao</a>
                     </li>
                     <div class="arrow-menu"></div>
                   </ul>
@@ -203,16 +203,16 @@
                 <div class="dropdown">
                   <ul class="list-unstyled">
                     <li class="drop-link">
-                      <a href="#">Thăt lưng, dây nịt</a>
+                      <a href="that-lung.htm">Thăt lưng, dây nịt</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Bóp ví</a>
+                      <a href="bop.htm">Bóp ví</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Khẩu trang</a>
+                      <a href="khau-trang.htm">Khẩu trang</a>
                     </li>
                     <li class="drop-link">
-                      <a href="#">Nón</a>
+                      <a href="non.htm">Nón</a>
                     </li>
                     <div class="arrow-menu"></div>
                   </ul>
@@ -231,7 +231,7 @@
             <i class="fa fa-search"></i>
           </button>
 
-          <a name="" id="account-btn" class="btn bg-transparent mx-5" href="login.htm" role="button">
+          <a name="" id="account-btn" class="btn bg-transparent mx-5" href="../pages/login.htm" role="button">
             <i class="fas fa-user text-dark"></i>
           </a>
       
@@ -241,6 +241,7 @@
           </a>
         </div>
       </div>
+
     </div>
   </div>
 
