--- a/website-project/pages/sales.htm
+++ b/website-project/pages/sales.htm
@@ -315,15 +315,15 @@
 
             <div class="col-3 d-flex flex-column item-product">
                 <a href="#">
-                  <img src="..\resources\img\product\ao-thun-ngan-tay\3_27_585x663.jpg" alt="5" width="100%;">
+                  <img src="..\resources\img\product\ao-thun-dai-tay\1-1_(2)_585x663.jpg" alt="5" width="100%;">
                 </a>
                 <div class="des-product">
                   <a href="#" class="name">
-                    Áo thun cổ tròn Cotton Compact Premium in Gấu trắng đặc biệt màu xanh rêu  
+                    Áo Polo Pique dài tay chống bám bụi - Xanh đậm Dusty Night Blue  
                   </a>
                   <br>
                   <a href="#" class="rate">(Xem đánh giá)</a>
-                  <p class="price">269.000đ</p>
+                  <p class="price">329.000đ</p>
                 </div>
                 <div class="buy">
                     <a name="" id="" class="btn w-100 rounded-0" href="#" role="button">Chọn mua</a>
@@ -332,15 +332,15 @@
 
             <div class="col-3 d-flex flex-column item-product">
                 <a href="#">
-                  <img src="..\resources\img\product\ao-thun-ngan-tay\im_single_33_585x663.jpg" alt="5" width="100%;">
+                  <img src="..\resources\img\product\ao-thun-dai-tay\18_41_585x663.jpg" alt="5" width="100%;">
                 </a>
                 <div class="des-product">
                   <a href="#" class="name">
-                    Áo thun cổ tròn Cotton Compact Premium in I'm Single 
+                    Áo thun nam dài tay Prime Henley 3 nút Cotton Compact Premium - Xanh lam 
                   </a>
                   <br>
                   <a href="#" class="rate">(Xem đánh giá)</a>
-                  <p class="price">259.000đ</p>
+                  <p class="price">279.000đ</p>
                 </div>
                 <div class="buy">
                     <a name="" id="" class="btn w-100 rounded-0" href="#" role="button">Chọn mua</a>
@@ -387,15 +387,15 @@
 
             <div class="col-3 d-flex flex-column item-product">
                 <a href="#">
-                  <img src="..\resources\img\product\ao-thun-ngan-tay\IMG_5717_copy_585x663.jpg" alt="5" width="100%;">
+                  <img src="..\resources\img\product\non\mu_den_unavailable_1_585x663.jpg" alt="5" width="100%;">
                 </a>
                 <div class="des-product">
                   <a href="#" class="name">
-                    Áo thun nam in Coolmate Cotton Compact phiên bản Premium - Trắng 
+                    Mũ lưỡi trai Baseball Unisex Unavailable màu đen 
                   </a>
                   <br>
                   <a href="#" class="rate">(Xem đánh giá)</a>
-                  <p class="price">269.000đ</p>
+                  <p class="price">89.000đ</p>
                 </div>
                 <div class="buy">
                     <a name="" id="" class="btn w-100 rounded-0" href="#" role="button">Chọn mua</a>
@@ -404,15 +404,15 @@
 
             <div class="col-3 d-flex flex-column item-product">
                 <a href="#">
-                  <img src="..\resources\img\product\ao-thun-ngan-tay\aoin_TTCV_585x663.jpg" alt="5" width="100%;">
+                  <img src="..\resources\img\product\quan-short\1125_x_1275_(13)_585x663.jpg" alt="5" width="100%;">
                 </a>
                 <div class="des-product">
                   <a href="#" class="name">
-                    Áo thun nam in Coolmate Cotton Compact phiên bản Premium - Đen
+                    Quần Short nỉ nam Active Gem màu xám - Shark Grey
                   </a>
                   <br>
                   <a href="#" class="rate">(Xem đánh giá)</a>
-                  <p class="price">259.000đ</p>
+                  <p class="price">249.000đ</p>
                 </div>
                 <div class="buy">
                     <a name="" id="" class="btn w-100 rounded-0" href="#" role="button">Chọn mua</a>
