--- a/website-project/pages/khau-trang.htm
+++ b/website-project/pages/khau-trang.htm
@@ -142,7 +142,7 @@
         <div class="nav-link-menu">
             <ul>
               <li class="nav-link" id="sales">
-                <a href="#">SALES</a>
+                <a href="sales.htm">SALES</a>
               </li>
               <li class="nav-link">
                 <a href="#">ÁO<i class="fa fa-caret-down"></i></a>
