--- a/website-project/pages/non.htm
+++ b/website-project/pages/non.htm
@@ -142,7 +142,7 @@
         <div class="nav-link-menu">
             <ul>
               <li class="nav-link" id="sales">
-                <a href="#">SALES</a>
+                <a href="sales.htm">SALES</a>
               </li>
               <li class="nav-link">
                 <a href="#">ÁO<i class="fa fa-caret-down"></i></a>
@@ -285,7 +285,7 @@
                 </a>
                 <div class="des-product">
                   <a href="#" class="name">
-                    Mũ lưỡi trai Baseball Unisex Unavailable
+                    Mũ lưỡi trai Baseball Unisex Unavailable  màu đen
                   </a>
                   <br>
                   <a href="#" class="rate">(Xem đánh giá)</a>
