Little bit responsive for ShoppingCart

--- a/website-project/pages/ItemDetail.html
+++ b/website-project/pages/ItemDetail.html
@@ -30,7 +30,7 @@
         <div class="option w-100 itemOptionModel"></div>
     </div>
 
-    <div class="wrapper">
+    <div class="wrapper my-3">
         <p class=" mx-2" id="navigatePath">
             <!-- <a href="#">Home Page</a> >
             <a href="#">Main Category</a> >
@@ -39,7 +39,7 @@
         </p>
 
         <div class="row mt-4 mx-2">
-            <div class="col">
+            <div class="col-md-6">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators" id="carouselOrderList">
                         <!-- <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -69,7 +69,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <div class="col container-fluid">
+            <div class="col-md-6">
                 <div class="mb-3">
                     <!-- Saber’s Excalibur that Won 2 Holly Grail Wars -->
                     <h2 class="itemName"></h2>
@@ -115,8 +115,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
     <!-- Optional JavaScript -->
