--- a/website-project/pages/shoppingCart.html
+++ b/website-project/pages/shoppingCart.html
@@ -26,19 +26,19 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-md-6">
-                            <input type="text" name="" id="" class="form-control" placeholder="Full name"
-                                aria-describedby="">
+                            <input type="text" name="" class="form-control" placeholder="Full name" aria-describedby="">
                         </div>
+
                         <div class="col-md-6">
-                            <input type="number" name="" id="" class="form-control" placeholder="Phone number"
+                            <input type="number" name="" class="form-control" placeholder="Phone number"
                                 aria-describedby="">
                         </div>
                         <div class="col-md-12">
-                            <input type="text" name="" id="" class="form-control my-3" placeholder="Address"
+                            <input type="text" name="" class="form-control my-3" placeholder="Address"
                                 aria-describedby="">
                             <input type="email" name="" id="" class="form-control my-3" placeholder="Email"
                                 aria-describedby="">
-                            <textarea class="form-control my-3" name="" id="" rows="3" placeholder="Notes"></textarea>
+                            <textarea class="form-control my-3" name="" id="" rows="6" placeholder="Notes"></textarea>
 
                             <div>
                                 <div class="tittleText my-2">Payment Method</div>
