--- a/website-project/pages/ItemDetail.html
+++ b/website-project/pages/ItemDetail.html
@@ -16,7 +16,16 @@
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous" />
 
     <!-- My CSS -->
+    <!-- <link rel="stylesheet" href="../resources/css/shoppingCart.css"> -->
     <link rel="stylesheet" href="../resources/css/detailsPage.css">
+
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="../resources/css/styles.css">
+    <link rel="stylesheet" href="../resources/css/list-products.css">
+
+    <!-- Icons-->
+    <script src="https://kit.fontawesome.com/8d195968ab.js"></script>
+
 </head>
 
 <body>
@@ -30,15 +39,175 @@
         <div class="option w-100 itemOptionModel"></div>
     </div>
 
-    <div class="wrapper my-3">
-        <p class=" mx-2" id="navigatePath">
+    <div>
+        <!-- Secsion Header Nav Contact-->
+        <div class="header-nav-bar border-bottom d-flex align-items-center ">
+
+            <!-- Script for form search-->
+            <script>
+                function showSearchForm() {
+                    document.getElementById("nav-bar-menu").style.display = "none";
+                    document.getElementById("form-search-nav").style.display = "block";
+                }
+            </script>
+
+            <script>
+                function closeSearchForm() {
+                    document.getElementById("nav-bar-menu").style.display = "flex";
+                    document.getElementById("form-search-nav").style.display = "none";
+                }
+            </script>
+
+            <div class="search-form-active container" id="form-search-nav">
+
+                <form method="get" action="" style="margin: 0; padding: 0;">
+                    <div class="top-bar-search is-active">
+
+                        <div class="container">
+                            <div class="input-group">
+                                <input type="text" class="form-control border-0" placeholder="Tìm sản phẩm ..."
+                                    autocomplete="off">
+                                <div class="input-group-append">
+
+                                    <button type="submit" class="btn btn-search-active"><i
+                                            class="fa fa-search"></i></button>
+                                    <button type="button" class="btn btn-close-search-active"
+                                        onclick="closeSearchForm()"><i class="fas fa-times"></i></button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+
+            </div>
+
+            <div class="nav-bar-menu container" id="nav-bar-menu">
+                <div class="logo-brand">
+                    <a href="../index.htm" class="h-100">
+                        <img src="../resources/img/fit-logo.png" alt="" style="height: 100%; width: 3.5rem;">
+                    </a>
+                    <h3>USG</h3>
+                </div>
+
+                <div class="nav-menu">
+                    <div class="nav-link-menu">
+                        <ul>
+                            <li class="nav-link" id="sales">
+                                <a href="sales.htm">SALES</a>
+                            </li>
+                            <li class="nav-link">
+                                <a href="#">ÁO<i class="fa fa-caret-down"></i></a>
+                                <div class="dropdown">
+                                    <ul class="list-unstyled">
+                                        <li class="drop-link">
+                                            <a href="ao-thun-ngan-tay.htm">Áo thun ngắn tay</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="ao-thun-dai-tay.htm">Áo thun dài tay</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="ao-tank-top.htm">Áo thun tank top</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="ao-somi.htm">Áo sơ mi</a>
+                                        </li>
+                                        <div class="arrow-menu"></div>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-link">
+                                <a href="#">QUẦN <i class="fa fa-caret-down"></i> </a>
+                                <div class="dropdown">
+                                    <ul class="list-unstyled">
+                                        <li class="drop-link">
+                                            <a href="quan-short.htm">Quần short</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="quan-jean.htm">Quần jean dài</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="quan-kaki.htm">Quần kaki dài</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="quan-jogger.htm">Quần jogger</a>
+                                        </li>
+                                        <div class="arrow-menu"></div>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-link">
+                                <a href="#">VỚ TẤT <i class="fa fa-caret-down"></i> </a>
+                                <div class="dropdown">
+                                    <ul class="list-unstyled">
+                                        <li class="drop-link">
+                                            <a href="vo-ngan.htm">Vớ ngắn</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="vo-dai.htm">Vớ cổ cao</a>
+                                        </li>
+                                        <div class="arrow-menu"></div>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-link">
+                                <a href="#">PHỤ KIỆN <i class="fa fa-caret-down"></i> </a>
+                                <div class="dropdown">
+                                    <ul class="list-unstyled">
+                                        <li class="drop-link">
+                                            <a href="that-lung.htm">Thăt lưng, dây nịt</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="bop.htm">Bóp ví</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="khau-trang.htm">Khẩu trang</a>
+                                        </li>
+                                        <li class="drop-link">
+                                            <a href="non.htm">Nón</a>
+                                        </li>
+                                        <div class="arrow-menu"></div>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-link">
+                                <a href="#">THÔNG TIN</a>
+                            </li>
+                        </ul>
+                    </div>
+
+
+
+                    <div class="nav-btn">
+                        <button type="button" class="btn bg-transparent" onclick="showSearchForm()" id="search-btn">
+                            <i class="fa fa-search"></i>
+                        </button>
+
+                        <a name="" id="account-btn" class="btn bg-transparent mx-5" href="../pages/login.htm"
+                            role="button">
+                            <i class="fas fa-user text-dark"></i>
+                        </a>
+
+                        <a name="" id="cart-btn" class="btn bg-dark rounded-0" href="./shoppingCart.html" role="button">
+                            <i class="fas fa-shopping-bag text-white"></i>
+                            <p>Giỏ hàng</p>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <p class="mt-3" id="navigatePath">
             <!-- <a href="#">Home Page</a> >
             <a href="#">Main Category</a> >
             <a href="#">Sub-Category</a> >
             <a href="#">Item name</a> -->
         </p>
 
-        <div class="row mt-4 mx-2">
+        <div class="row mt-3 contentDiv">
             <div class="col-md-6">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators" id="carouselOrderList">
@@ -112,6 +281,62 @@
                     <button type="button" name="" id="" class="btn btn-lg btn-block addToCartButton">
                         ADD TO CART
                     </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer" style="overflow-x: hidden;">
+        <!-- Secsion Header Top Infor Contact-->
+        <!-- Show only for large screen -->
+        <div class="header-infor-top d-none d-sm-none d-md-none d-lg-block text-white py-1">
+            <div class="container">
+                <div class="row">
+
+                    <!-- Top Left -->
+                    <div class="col-8">
+                        <div class="header-address-contact">
+                            <p class="my-0">
+                                <a href="mailto:fit_hcmus@gmail.com">
+                                    <i class="fa fa-envelope-o ml-0"></i>
+                                    fit_hcmus@email.com
+                                </a>
+                                <span><i class="fa fa-map-marker"></i>227 Ng Van Cu, Ward 4, District 5, HCM</span>
+                                <a href="tel:+ (1800) 456 7890">
+                                    <i class="fa fa-phone"></i>
+                                    + (84) 123 4567
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <!-- Top Right-->
+                    <div class="col-4">
+                        <div class="header-icon-contact">
+                            <ul class="social-icons text-right list-unstyled d-flex justify-content-end my-0">
+                                <li>
+                                    <a href="https://www.facebook.com/" data-toggle="tooltip" title="Facebook"
+                                        target="_blank">
+                                        <i class="fa fa-facebook  text-white my-0"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/" data-toggle="tooltip" title="Twitter"
+                                        target="_blank">
+                                        <i class="fa fa-twitter  text-white my-0"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://instagram.com/" data-toggle="tooltip" title="Instagram"
+                                        target="_blank">
+                                        <i class="fa fa-instagram  text-white my-0"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
