Fix navigation to main page & Bring info to footer

--- a/website-project/pages/shoppingCart.html
+++ b/website-project/pages/shoppingCart.html
@@ -26,6 +26,13 @@
 </head>
 
 <body>
+    <!-- Script for boostrap tooltip -->
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+
     <div>
         <!-- Secsion Header Nav Contact-->
         <div class="header-nav-bar border-bottom d-flex align-items-center ">
