--- a/website-project/pages/ItemDetail.html
+++ b/website-project/pages/ItemDetail.html
@@ -39,6 +39,13 @@
         <div class="option w-100 itemOptionModel"></div>
     </div>
 
+    <!-- Script for boostrap tooltip -->
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+
     <div>
         <!-- Secsion Header Nav Contact-->
         <div class="header-nav-bar border-bottom d-flex align-items-center ">
