Navigate to ItemDetail and shoppingCart

--- a/website-project/pages/ao-thun-dai-tay.htm
+++ b/website-project/pages/ao-thun-dai-tay.htm
@@ -195,8 +195,6 @@
     </div>
   </div>
 
-
-
   <!-- Body -->
   <div class="body-content container">
     <div class="secsion-header-title">
@@ -395,6 +393,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
