--- a/website-project/pages/khau-trang.htm
+++ b/website-project/pages/khau-trang.htm
@@ -194,8 +194,6 @@
     </div>
   </div>
 
-
-
   <!-- Body -->
   <div class="body-content container">
     <div class="secsion-header-title">
@@ -304,6 +302,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
