--- a/website-project/pages/vo-dai.htm
+++ b/website-project/pages/vo-dai.htm
@@ -30,6 +30,7 @@
   <script src="../resources/vendors/js/popper.min.js"></script>
   <script src="../resources/vendors/js/bootstrap.min.js"></script>
 
+
   <!-- Script for boostrap tooltip -->
   <script>
     $(document).ready(function () {
@@ -336,6 +337,9 @@
     </div>
   </div>
 
+
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
