--- a/website-project/pages/vo-ngan.htm
+++ b/website-project/pages/vo-ngan.htm
@@ -318,6 +318,9 @@
       </div>
     </div>
   </div>
+
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
