--- a/website-project/pages/ao-somi.htm
+++ b/website-project/pages/ao-somi.htm
@@ -302,10 +302,6 @@
     </div>
   </div>
 
-
-
-
-
   <div class="footer" style="overflow-x: hidden;">
     <!-- Secsion Header Top Infor Contact-->
     <!-- Show only for large screen -->
@@ -359,6 +355,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
