--- a/website-project/pages/ao-tank-top.htm
+++ b/website-project/pages/ao-tank-top.htm
@@ -341,6 +341,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
