--- a/website-project/pages/bop.htm
+++ b/website-project/pages/bop.htm
@@ -356,6 +356,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
