--- a/website-project/pages/quan-jean.htm
+++ b/website-project/pages/quan-jean.htm
@@ -288,10 +288,6 @@
     </div>
   </div>
 
-
-
-
-
   <!-- Secsion Footer -->
   <div class="footer" style="overflow-x: hidden;">
     <!-- Secsion Header Top Infor Contact-->
@@ -346,6 +342,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
