--- a/website-project/pages/shoppingCart.html
+++ b/website-project/pages/shoppingCart.html
@@ -26,10 +26,15 @@
 </head>
 
 <body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="../resources/vendors/js/jquery-3.3.1.min.js"></script>
+    <script src="../resources/vendors/js/popper.min.js"></script>
+    <script src="../resources/vendors/js/bootstrap.min.js"></script>
     <!-- Script for boostrap tooltip -->
     <script>
         $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-toggle="tooltip"]').tooltip()
         });
     </script>
 
@@ -513,11 +518,7 @@
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="../resources/vendors/js/jquery-3.3.1.min.js"></script>
-    <script src="../resources/vendors/js/popper.min.js"></script>
-    <script src="../resources/vendors/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
