--- a/website-project/pages/that-lung.htm
+++ b/website-project/pages/that-lung.htm
@@ -340,6 +340,8 @@
     </div>
   </div>
 
+  <!-- Navigate to ItemDetail.html when click -->
+  <script type="module" src="../resources/js/Navigator.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
