Meeting 2/12/2020: Adjust some folder & file for HandleBars

--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@
 
 
 
-    <div class="nav-bar-menu container" id="nav-bar-menu">
+    <div class="nav-bar-menu container" id="nav-bar-menu" style="background-color: #659dbd;">
       <div class="logo-brand">
         <a href="index.htm" class="h-100">
           <img src="resources/img/fit-logo.png" alt="" style="height: 100%; width: 3.5rem;">
