--- a/pages/ItemDetail.html
+++ b/pages/ItemDetail.html
@@ -206,7 +206,7 @@
         </div>
     </div>
 
-    <div class="wrapper">
+    <div class="body-content container-fluid">
         <p class="mt-3" id="navigatePath">
             <!-- <a href="#">Home Page</a> >
             <a href="#">Main Category</a> >
