--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -198,9 +198,9 @@
         </div>
     </div>
 
-    <div class="wrapper">
+    <div class="body-content container-fluid">
         <div class="row">
-            <div class="col-md-8" id="formWrapper">
+            <div class="col-md-7" id="formWrapper">
                 <div class="formTittle">BASIC INFORMATION</div>
 
                 <div class="form-group">
@@ -242,7 +242,7 @@
                     <!-- <small id="helpId" class="text-muted"></small> -->
                 </div>
             </div>
-            <div class="col-md-4 d-flex flex-column justify-content-between">
+            <div class="col-md-5 d-flex flex-column justify-content-between">
                 <div>
                     <div class="formTittle">YOUR CART</div>
                     <div class="chosenItemDiv">
