--- a/pages/ItemDetail.html
+++ b/pages/ItemDetail.html
@@ -32,8 +32,8 @@
     <div style="display: none;">
         <li class="carouselListItemModel" data-target="#carouselExampleIndicators"></li>
 
-        <div class="carousel-item imageDiv carouselImageDivModel">
-            <img class=" w-100">
+        <div class="carousel-item imageDiv carouselImageDivModel align-middle">
+            <img class="h-100 w-100 ">
         </div>
 
         <div class="option w-100 itemOptionModel"></div>
@@ -208,10 +208,7 @@
 
     <div class="body-content container-fluid">
         <p class="mt-3" id="navigatePath">
-            <!-- <a href="#">Home Page</a> >
-            <a href="#">Main Category</a> >
-            <a href="#">Sub-Category</a> >
-            <a href="#">Item name</a> -->
+
         </p>
 
         <div class="row mt-3 contentDiv">
@@ -269,7 +266,7 @@
                     </div>
                 </div>
 
-                <div class="my-2">
+                <div>
                     <p class="tittleText">Options:</p>
                     <div class="d-flex justify-content-between optionsDiv">
                         <!-- <div class="option w-100 "> A </div>
@@ -278,10 +275,12 @@
                     </div>
                 </div>
 
-                <div class="my-3">
+                <div class="my-1">
                     <p class="tittleText">Description:</p>
-                    <p class="descriptionText">
-                    </p>
+
+                    <div class="form-group">
+                        <textarea class="form-control descriptionText" disabled rows="5"></textarea>
+                    </div>
                 </div>
 
                 <div class="my-4">
