Static page for admin

--- a/pages/admin/admin-account.htm
+++ b/pages/admin/admin-account.htm
@@ -42,7 +42,7 @@
 
         <ul class="main-menu">
           <li>
-            <a href="#">
+            <a href="admin-dasboard.htm">
               <i class="fa fa-home fa-2x"></i>
               <span class="nav-text"> Dashboard </span>
             </a>
@@ -86,7 +86,7 @@
 
         <ul class="logout">
           <li>
-            <a href="#">
+            <a href="/logout">
               <i class="fa fa-power-off fa-2x"></i>
               <span class="nav-text"> Đăng xuất </span>
             </a>
