--- a/pages/admin/admin-dasboard.htm
+++ b/pages/admin/admin-dasboard.htm
@@ -1,158 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>USG</title>
-    <link
-      rel="shortcut icon"
-      href="resources/img/icon/web.ico"
-      type="image/x-icon"
-    />
+	<head>
+		<title>USG</title>
+		<link
+			rel="shortcut icon"
+			href="resources/img/icon/web.ico"
+			type="image/x-icon"
+		/>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="Universal Simplistic Grocery" />
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<meta name="description" content="Universal Simplistic Grocery" />
 
-    <!-- Icons-->
-    <script src="https://kit.fontawesome.com/8d195968ab.js"></script>
+		<!-- Icons-->
+		<script src="https://kit.fontawesome.com/8d195968ab.js"></script>
 
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="../../resources/css/admin-style.css" />
-    <link rel="stylesheet" href="../../resources/css/admin-dasboard.css" />
+		<!-- Style CSS -->
+		<link rel="stylesheet" href="../../resources/css/admin-style.css" />
+		<link rel="stylesheet" href="../../resources/css/admin-dasboard.css" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-  </head>
+		<!-- Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			crossorigin="anonymous"
+		/>
+	</head>
 
-  <body>
-    <!-- Navigation Secsion-->
-    <div class="navbar-side-seccsion">
-      <nav class="side-navbar">
-        <div class="logo-brand">
-          <h3>USG</h3>
-        </div>
+	<body>
+		<!-- Navigation Secsion-->
+		<div class="navbar-side-seccsion">
+			<nav class="side-navbar">
+				<div class="logo-brand">
+					<h3>USG</h3>
+				</div>
 
-        <ul class="main-menu">
-          <li>
-            <a href="#">
-              <i class="fa fa-home fa-2x"></i>
-              <span class="nav-text"> Dashboard </span>
-            </a>
-          </li>
+				<ul class="main-menu">
+					<li>
+						<a href="#">
+							<i class="fa fa-home fa-2x"></i>
+							<span class="nav-text"> Dashboard </span>
+						</a>
+					</li>
 
-          <li>
-            <a href="admin-profile.htm">
-              <i class="far fa-user-circle"></i>
-              <span class="nav-text"> Profile </span>
-            </a>
-          </li>
+					<li>
+						<a href="admin-profile.htm">
+							<i class="far fa-user-circle"></i>
+							<span class="nav-text"> Profile </span>
+						</a>
+					</li>
 
-          <li>
-            <a href="admin-list-product.htm">
-              <i class="fa fa-list fa-2x"></i>
-              <span class="nav-text"> Danh sách sản phẩm </span>
-            </a>
-          </li>
+					<li>
+						<a href="admin-list-product.htm">
+							<i class="fa fa-list fa-2x"></i>
+							<span class="nav-text"> Danh sách sản phẩm </span>
+						</a>
+					</li>
 
-          <li>
-            <a href="admin-order-list.htm">
-              <i class="fas fa-file-invoice fa-2x"></i>
-              <span class="nav-text"> Đơn hàng </span>
-            </a>
-          </li>
+					<li>
+						<a href="admin-order-list.htm">
+							<i class="fas fa-file-invoice fa-2x"></i>
+							<span class="nav-text"> Đơn hàng </span>
+						</a>
+					</li>
 
-          <li>
-            <a href="admin-comment.htm">
-              <i class="far fa-comment-dots"></i>
-              <span class="nav-text"> Quản lý Comment </span>
-            </a>
-          </li>
+					<li>
+						<a href="admin-comment.htm">
+							<i class="far fa-comment-dots"></i>
+							<span class="nav-text"> Quản lý Comment </span>
+						</a>
+					</li>
 
-          <li>
-            <a href="#">
-              <i class="fas fa-users-cog"></i>
-              <span class="nav-text"> Quản lý tài khoản </span>
-            </a>
-          </li>
-        </ul>
+					<li>
+						<a href="#">
+							<i class="fas fa-users-cog"></i>
+							<span class="nav-text"> Quản lý tài khoản </span>
+						</a>
+					</li>
+				</ul>
 
-        <ul class="logout">
-          <li>
-            <a href="#">
-              <i class="fa fa-power-off fa-2x"></i>
-              <span class="nav-text"> Đăng xuất </span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+				<ul class="logout">
+					<li>
+						<a href="/logout">
+							<i class="fa fa-power-off fa-2x"></i>
+							<span class="nav-text"> Đăng xuất </span>
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 
-    <!-- Main Content Secsion-->
-    <div class="body-area">
-      <div class="body-content">
-        <h3 class="page-title">THỐNG KẾ THÔNG TIN CỬA HÀNG</h3>
+		<!-- Main Content Secsion-->
+		<div class="body-area">
+			<div class="body-content">
+				<h3 class="page-title">THỐNG KẾ THÔNG TIN CỬA HÀNG</h3>
 
-        <div class="row">
-          <!-- biểu đồ tròn sản phẩm stock + sales từng loại -->
-          <figure class="col-4">
-            <div id="pie-percent-category"></div>
-          </figure>
+				<div class="row">
+					<!-- biểu đồ tròn sản phẩm stock + sales từng loại -->
+					<figure class="col-4">
+						<div id="pie-percent-category"></div>
+					</figure>
 
-          <!-- biểu đồ cột sản phẩm stock + sale từng loại -->
-          <figure class="col-4">
-            <div id="column-number-category"></div>
-          </figure>
+					<!-- biểu đồ cột sản phẩm stock + sale từng loại -->
+					<figure class="col-4">
+						<div id="column-number-category"></div>
+					</figure>
 
-          <!-- biểu đồ cột số lượng hoá đơn theo tháng -->
-          <figure class="col-4">
-            <div id="column-number-bill"></div>
-          </figure>
+					<!-- biểu đồ cột số lượng hoá đơn theo tháng -->
+					<figure class="col-4">
+						<div id="column-number-bill"></div>
+					</figure>
 
-          <!-- biểu đồ cột số lượng sản phẩm stock từng loại-->
-          <figure class="col-4">
-            <div id="column-number-stock-category"></div>
-          </figure>
+					<!-- biểu đồ cột số lượng sản phẩm stock từng loại-->
+					<figure class="col-4">
+						<div id="column-number-stock-category"></div>
+					</figure>
 
-          <!-- biểu đồ cột số lượng sản phẩm đã sales từng loại-->
-          <figure class="col-4">
-            <div id="column-number-sales-category"></div>
-          </figure>
-        </div>
-      </div>
-    </div>
+					<!-- biểu đồ cột số lượng sản phẩm đã sales từng loại-->
+					<figure class="col-4">
+						<div id="column-number-sales-category"></div>
+					</figure>
+				</div>
+			</div>
+		</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+			integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+			crossorigin="anonymous"
+		></script>
 
-    <!-- Import highcharts -->
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+		<!-- Import highcharts -->
+		<script src="https://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+		<script src="https://code.highcharts.com/modules/export-data.js"></script>
+		<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
-    <script src="../../resources/js/AdminDashboard.js"></script>
-  </body>
+		<script src="../../resources/js/AdminDashboard.js"></script>
+	</body>
 </html>
